# liesel-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  environment-osx-arm64.yml  environment.yml  pyproject.toml
examples/01-quarto/: example.md  example.qmd
examples/02-gnu-parallel/: run.sh  scenario.qmd  viz.md  viz.qmd
examples/02-gnu-parallel/jobs/job-1/: scenario.md  splines.rds
examples/02-gnu-parallel/jobs/job-2/: scenario.md  splines.rds
examples/02-gnu-parallel/jobs/job-3/: scenario.md  splines.rds
examples/02-gnu-parallel/jobs/job-4/: scenario.md  splines.rds
src/liesel_template/: __init__.py  bivariate_normal.py
tests/: test_bivariate_normal.py
